--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 server:
-  host: "127.0.0.1"
+  host: "0.0.0.0"
   port: 3001
 
 database:
-  url: 
+  url: "mysql://root:root@127.0.0.1:3306/roster"
